集成eureka-server、eureka-client

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <module>cloud-provider-payment8001</module>
     <module>cloud-consumer-oder80</module>
     <module>cloud-api-common</module>
+      <module>cloud-eureka-server7001</module>
   </modules>
   <!--父工程-->
   <packaging>pom</packaging>
