--- a/cloud-consumer-oder80/src/main/resources/application.yml
+++ b/cloud-consumer-oder80/src/main/resources/application.yml
@@ -1,2 +1,15 @@
 server:
   port: 80
+
+spring:
+  application:
+    name: cloud-order-service
+
+
+eureka:
+  client:
+    register-with-eureka: true   #true表示向注册中心注册自己
+    fetch-registry: true   #true表示自己端不是注册中心
+    service-url:
+#      defaultZone: http://localhost:7001/eureka # 单机版
+      defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka # 集群版
