--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -18,7 +18,8 @@ eureka:
     register-with-eureka: true   #是否将自己注册到注册中心,集群必须设置为true配合ribbon
     fetch-registry: true    #是否从服务端抓取已有的注册信息
     service-url:
-      defaultZone: http://localhost:7001/eureka #http://eureka7001.com:7001/eureka #,http://eureka7002.com:7002/eureka
+#      defaultZone: http://localhost:7001/eureka # 单机版
+      defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka # 集群版
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
