--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <module>cloud-api-common</module>
       <module>cloud-eureka-server7001</module>
       <module>cloud-eureka-server7002</module>
+    <module>cloud-provider-payment8002</module>
   </modules>
   <!--父工程-->
   <packaging>pom</packaging>
