--- a/cloud-eureka-server7001/src/main/resources/application.yml
+++ b/cloud-eureka-server7001/src/main/resources/application.yml
@@ -9,12 +9,12 @@ eureka:
     register-with-eureka: false   #false表示不向注册中心注册自己
     fetch-registry: false   #false表示自己端就是注册中心
     service-url:
-#      defaultZone: http://eureka7001.com:7001/eureka/   #单机
-      defaultZone: http://eureka7002.com:7002/eureka/  #集群配置指向7002
+      defaultZone: http://eureka7001.com:7001/eureka/   #单机配置指向自己
+#      defaultZone: http://eureka7002.com:7002/eureka/  #集群配置指向7002
 #  server:
-#    # 关闭自我保护机制，保证不可用服务被及时剔除
-#    enable-self-preservation: false
-#    eviction-interval-timer-in-ms: 2000
+#    # 关闭自我保护机制,保证不可用服务被及时剔除
+#    enable-self-preservation: false #关闭自我保护机制
+#    eviction-interval-timer-in-ms: 2000 #心跳包时间2秒
 spring:
   application:
     name: cloud-eureka-service
