--- a/cloud-eureka-server7002/src/main/resources/application.yml
+++ b/cloud-eureka-server7002/src/main/resources/application.yml
@@ -8,7 +8,8 @@ eureka:
     register-with-eureka: false   #false表示不向注册中心注册自己
     fetch-registry: false   #false表示自己端就是注册中心
     service-url:
-      defaultZone: http://eureka7001.com:7001/eureka/ # 集群配置指向7001
+      defaultZone: http://eureka7002.com:7002/eureka/   #单机配置指向自己
+      #      defaultZone: http://eureka7001.com:7001/eureka/  #集群配置指向7001
 spring:
   application:
     name: cloud-eureka-service
