--- a/cloud-provider-payment8002/src/main/resources/application.yml
+++ b/cloud-provider-payment8002/src/main/resources/application.yml
@@ -20,6 +20,9 @@ eureka:
     service-url:
 #      defaultZone: http://localhost:7001/eureka # 单机版
       defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka # 集群版
+  instance:
+      instance-id: payment8002 #对外显示的名称,隐藏主机名
+      prefer-ip-address: true #显示ip,方便查看
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
