--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -1,7 +1,6 @@
 server:
   port: 8001
 
-
 spring:
   application:
     name: cloud-payment-service
@@ -12,14 +11,13 @@ spring:
     username: root
     password: 123456
 
-
 eureka:
   client:
     register-with-eureka: true   #是否将自己注册到注册中心,集群必须设置为true配合ribbon
     fetch-registry: true    #是否从服务端抓取已有的注册信息
     service-url:
-      defaultZone: http://localhost:7001/eureka # 单机版
-#      defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka # 集群版
+#      defaultZone: http://localhost:7001/eureka # 单机版
+      defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka # 集群版
   instance:
     instance-id: payment8001 #对外显示的名称,隐藏主机名
     prefer-ip-address: true #显示ip,方便查看
@@ -28,4 +26,4 @@ eureka:
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
-  type-aliases-package: com.ivan.entity
+  type-aliases-package: com.ivan.springcloud.entity
