--- a/cloud-provider-payment8002/src/main/resources/application.yml
+++ b/cloud-provider-payment8002/src/main/resources/application.yml
@@ -1,7 +1,6 @@
 server:
   port: 8002
 
-
 spring:
   application:
     name: cloud-payment-service
@@ -11,7 +10,6 @@ spring:
     url: jdbc:mysql://localhost:3306/springcloud2020?characterEncoding=utf-8&serverTimezone=GMT%2B8 # GMT%2B8表示北京时间 也可以UTC
     username: root
     password: 123456
-
 
 eureka:
   client:
@@ -26,4 +24,4 @@ eureka:
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
-  type-aliases-package: com.ivan.entity
+  type-aliases-package: com.ivan.springcloud.entity
