--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <module>cloud-provider-payment8002</module>
     <module>cloud-provider-consul-payment8006</module>
       <module>cloud-consumer-consul-order80</module>
+      <module>cloud-consumer-feign-order80</module>
   </modules>
   <!--父工程-->
   <packaging>pom</packaging>
