--- a/cloud-config-center3344/pom.xml
+++ b/cloud-config-center3344/pom.xml
@@ -54,6 +54,12 @@
             <scope>true</scope>
         </dependency>
 
+        <!--添加消息总线的支持-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bus-amqp</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
