--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
       <module>cloud-gateway-gateway9527</module>
       <module>cloud-config-center3344</module>
       <module>cloud-config-client3355</module>
+      <module>cloud-config-client3366</module>
   </modules>
   <!--父工程-->
   <packaging>pom</packaging>
