--- a/cloud-consumer-oder80/src/main/resources/application.yml
+++ b/cloud-consumer-oder80/src/main/resources/application.yml
@@ -4,6 +4,13 @@ server:
 spring:
   application:
     name: cloud-order-service
+    #链路监控zipkin
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+    #采样率介于0-1之间,1表示全部采集
+      probability: 1
 
 eureka:
   client:
