--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -4,6 +4,14 @@ server:
 spring:
   application:
     name: cloud-payment-service
+    #链路监控zipkin
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+    #采样率介于0-1之间,1表示全部采集
+      probability: 1
+  #数据库
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
